force-app/main/default/objects/Event_Type_Host__c/Event_Type_Host__c.object-meta.xml
<CustomObject>
    <description>Links a host user to a team event type with scheduling configuration</description>
    <label>Event Type Host</label>
    <nameField>
        <displayFormat>ETH-{00000}</displayFormat>
        <label>Host Assignment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Type Hosts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>