force-app/main/default/objects/Event_Type_Host__c/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <label>Event Type</label>
    <referenceTo>Event_Type__c</referenceTo>
    <relationshipLabel>Hosts</relationshipLabel>
    <relationshipName>Hosts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>