force-app/main/default/objects/Event_Type_Host__c/fields/Is_Fixed__c.field-meta.xml
<CustomField>
    <fullName>Is_Fixed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Fixed hosts are always included in collective events</description>
    <label>Is Fixed</label>
    <type>Checkbox</type>
</CustomField>