force-app/main/default/objects/Event_Type_Host__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Priority for round-robin assignment (higher = more likely)</description>
    <label>Priority</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>