force-app/main/default/objects/Event_Type_Host__c/fields/Schedule__c.field-meta.xml
<CustomField>
    <fullName>Schedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Optional per-host schedule override for this event type</description>
    <label>Schedule Override</label>
    <referenceTo>Schedule__c</referenceTo>
    <relationshipLabel>Host Assignments</relationshipLabel>
    <relationshipName>Host_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>