force-app/main/default/objects/Event_Type_Host__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <label>Host User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Event Type Assignments</relationshipLabel>
    <relationshipName>Event_Type_Assignments</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <type>Lookup</type>
</CustomField>