force-app/main/default/objects/Event_Type_Host__c/fields/Weight__c.field-meta.xml
<CustomField>
    <fullName>Weight__c</fullName>
    <defaultValue>100</defaultValue>
    <description>Weighting for round-robin distribution (percentage-based)</description>
    <label>Weight</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>